--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=aprendices
-spring.datasource.url = jdbc:mysql://localhost:3306/ejemplodb
-spring.datasource.username = Samuel
-spring.datasource.password = 1234
+spring.datasource.url = jdbc:mysql://kasedb.c3ocuc62su4y.us-east-2.rds.amazonaws.com:3306/aprendices
+spring.datasource.username = ${DB_USER}
+spring.datasource.password = ${DB_PASSWORD}
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
